WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
217575
[JSC] BigInt constructor should be constructible while it always throws an error
https://bugs.webkit.org/show_bug.cgi?id=217575
Summary
[JSC] BigInt constructor should be constructible while it always throws an error
Yusuke Suzuki
Reported
2020-10-11 03:16:20 PDT
[JSC] BigInt constructor should be constructible while it always throws an error
Attachments
Patch
(4.84 KB, patch)
2020-10-11 03:18 PDT
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2020-10-11 03:18:41 PDT
Created
attachment 411045
[details]
Patch
EWS
Comment 2
2020-10-11 11:14:34 PDT
Committed
r268322
: <
https://trac.webkit.org/changeset/268322
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 411045
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-10-11 11:15:24 PDT
<
rdar://problem/70184183
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug