[JSC] BigInt constructor should be constructible while it always throws an error https://bugs.webkit.org/show_bug.cgi?id=217575

Reviewed by Darin Adler.

JSTests:

* stress/is-constructor.js:
* stress/non-constructable-constructors.js: Added.
(shouldThrow):

Source/JavaScriptCore:

In terms of the spec, BigInt constructor should be a constructor. So we should put constructBigIntConstructor function instead of nullptr.
But it should always throw a TypeError. Error message looks a bit awkward ("TypeError: function is not a constructor..."), but this looks
most intuitive to users. Note that V8 and SpiderMonkey throw similar messages ("is not a constructor").

* runtime/BigIntConstructor.cpp:
(JSC::BigIntConstructor::BigIntConstructor):
(JSC::JSC_DEFINE_HOST_FUNCTION):


Canonical link: https://commits.webkit.org/230345@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@268322 268f45cc-cd09-0410-ab3c-d52691b4dbfc